# car_api

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile_back  Dockerfile_migrations  README.md  curl_examples  docker-compose.yaml
car_api/: Cargo.toml
car_api/migrations/: 20221213130902_init_fns.down.sql  20221213130902_init_fns.up.sql  20221213153434_init_tables.down.sql  20221213153434_init_tables.up.sql
car_api/src/: database.rs  encrypt.rs  errors.rs  lib.rs  main.rs  server.rs  startup.rs
car_api/src/routes/: account.rs  authenticate.rs  mod.rs  note.rs  time_format.rs  user.rs
car_api/tests/: create_account.rs  get_account_details.rs  health_check.rs  setup.rs
tests/: account.rs  health_check.rs  setup.rs
