[package]
name = "car_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# back
axum = { version = "0.6" }
axum-extra = { version = "0.5", features = ["query"] }
tokio = { version = "1.25", features = ["full"] }

#login
## use lateset commit in main in orther to use axum login with postgers as a store
axum-login = { git = "https://github.com/maxcountryman/axum-login", rev = "4efb8aa", features = ["postgres"] }
rand = { version = "0.8", features = ["min_const_gen"] }

#DB
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres", "time", "uuid"] }

# Important secondary crates
serde = { version = "1.0", features = ["derive"] }
time = "0.3" # chrono ?
uuid = { version = "1.3", features = ["serde"] }
openssl = { version = "0.10" }
# base64 = {}

serde_with = { version = "2.2", features = ["time_0_3"] }
validator = { version = "0.16", features = ["derive"] }

#logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# utility
thiserror = "1.0"
serde_json = "1.0"
dotenv = "0.15"
envconfig = "0.10"
